--- a/.html
+++ b/.html
@@ -11,6 +11,7 @@
         <a href="#">About</a>
         <a href="#">Log In</a>
         <a href="#">Sign Up</a>
+        <a href="#">Home</a>
     </nav>
 </body>
 </html>
