--- a/.html
+++ b/.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-
+ <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Log In</a>
+    <a href="#">Sign Up</a>
+ </nav>
 </body>
 </html>
