added home in nav bar

--- a/.html
+++ b/.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>This is a test!</h1>
-    <h2>brendan test</h2>
-    <h3>another test</h3>
-    <h4>another</h4>
+   <nav>
+    <a href="#">About</a>
+    <a href="#">Home</a>
+   </nav>
 </body>
 </html>
