--- a/.html
+++ b/.html
@@ -16,6 +16,8 @@
  </nav>
     <h1>This is a test!</h1>
     <h2>brendan test</h2>
-
+<footer>
+    <p>Thats it! Footer!</p>
+</footer>
 </body>
 </html>
